# scylla

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README  docker-compose.yaml  rustfmt.toml  scylla.hocon  sqlx-data.json
migrations/: 20210305215105_initial.sql  20210306012136_latest_uptime_status.sql  20210306182543_default_check_count.sql  20210306194158_non_null_ids.sql
src/: config.rs  lib.rs  main.rs
src/checks/: dns.rs  http.rs  injects.rs  mod.rs  tcp.rs  udp.rs
src/cli/: mod.rs
src/db/: mod.rs  mutation.rs  query.rs
src/web/: mod.rs  templates.rs
templates/: head.html  leaderboard.html  patch.html  scores.html
